--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
       </header>
 
       <section class="site-content">
+        
         <section class="slider">
-          <h1>Page Title</h1>
+          <img src="/images/dom-pod-wierzba-slider-photo-01.jpg" alt="widok z Domu pod Wierzbą 01">
         </section>
 
         <section class="offer"></section>
