slider and images

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <header class="main-header">
         <div class="main-header__logo">
           <img
-            src="/images/logo-dom-pod-wierzba.jpg"
+            src="/images/dom-pod-wierzba-logo.jpg"
             alt="pod pod wierzbą logotyp"
           />
         </div>
@@ -40,7 +40,7 @@
       <section class="site-content">
         
         <section class="slider">
-          <img src="/images/dom-pod-wierzba-slider-photo-01.jpg" alt="widok z Domu pod Wierzbą 01">
+          <img src="/images/slide-01-napis.jpg" alt="widok z Domu pod Wierzbą 01">
         </section>
 
         <section class="offer"></section>
