--- a/index.html
+++ b/index.html
@@ -22,9 +22,34 @@
           MENU
         </button>
         <nav class="navigation navigation--js">
-          <ul>
+         
+         <!--  <ul id="main">
+            <li>Home</li>
+            <li>About</li>
+            <li>Skills
+              <ul class="drop">
+                <div>
+                <li>scss</li>
+                <li>jquery</li>
+                <li>html</li>
+                </div>
+              </ul>
+            </li>
+            <li>Contact</li>
+            <div id="marker"></div>
+          </ul> -->
+         
+          <ul id="main-menu-ul">
             <li><a class="navigation__link" href="index.html">Home</a></li>
-            <li><a class="navigation__link" href="#offer">Oferta</a></li>
+            <li><a class="navigation__link" href="#offer">Oferta</a>
+              <ul class="main-menu-drop">
+                <div>
+                <li>warsztaty</li>
+                <li>akupunktura</li>
+                <li>terapie</li>
+                </div>
+              </ul>
+            </li>
             <li>
               <a class="navigation__link" href="lgd-dobra-widawa.html"
                 >LGD Dobra Widawa</a
@@ -32,8 +57,10 @@
             </li>
 
             <li><a class="navigation__link" href="#contact">Kontakt</a></li>
-
+            <div id="main-menu-marker"></div>
           </ul>
+
+
         </nav>
       </header>
 
