main menu adjust

--- a/index.html
+++ b/index.html
@@ -23,30 +23,15 @@
         </button>
         <nav class="navigation navigation--js">
          
-         <!--  <ul id="main">
-            <li>Home</li>
-            <li>About</li>
-            <li>Skills
-              <ul class="drop">
-                <div>
-                <li>scss</li>
-                <li>jquery</li>
-                <li>html</li>
-                </div>
-              </ul>
-            </li>
-            <li>Contact</li>
-            <div id="marker"></div>
-          </ul> -->
-         
           <ul id="main-menu-ul">
             <li><a class="navigation__link" href="index.html">Home</a></li>
             <li><a class="navigation__link" href="#offer">Oferta</a>
               <ul class="main-menu-drop">
                 <div>
-                <li>warsztaty</li>
-                <li>akupunktura</li>
-                <li>terapie</li>
+                <li><a class="navigation__link--drop" href="#offer">Wypoczynek z Nordic Walking</a></li>
+                <li><a class="navigation__link--drop" href="#offer">Terapia holistyczna</a></li>
+                <li><a class="navigation__link--drop" href="#offer">Akupunktura</a></li>
+                <li><a class="navigation__link--drop" href="#offer">Warsztaty</a></li>
                 </div>
               </ul>
             </li>
