--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       <header class="main-header">
         <div class="main-header__logo">
           <img
+            class="main-header__logo-img"
             src="/images/dom-pod-wierzba-logo.jpg"
             alt="pod pod wierzbą logotyp"
           />
@@ -164,10 +165,14 @@
             </header>
 
             <p class="about-article__text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi
-              porro iste excepturi! Voluptate numquam quasi veritatis similique
-              distinctio iure optio minima autem est, corporis ab laudantium
-              excepturi possimus quam deleniti!
+              Dom pod Wierzbą to spokojny rodzinny dom, a jednocześnie ośrodek
+              rozwoju. Niepowtarzalne jest to, że Joanna i Paweł na co dzień tu
+              mieszkają. To nadaje ośrodkowi przytulny charakter rodzinnego
+              domu. To miejsce na szkolenia, warsztaty i treningi. Tutaj też
+              głównie prowadzimy nasze  sesje akupunktury, psychoterapii,
+              autorskie warsztaty i treningi oddechowe. Dom i jego położenie
+              daje wytchnienie, głębokie zanurzenie w ciszy i naturze. Sprzyja
+              kreatywnej i duchowej pracy.
             </p>
             <button class="about-article__button"></button>
           </article>
@@ -282,8 +287,7 @@
             Dobra Widawa przeznaczonych zostało 14 000 000 zł.
           </p>
           <p class="fund-info__text">
-            Informacje o LGD
-            Dobra Widawa: www.dobrawidawa.pl
+            Informacje o LGD Dobra Widawa: www.dobrawidawa.pl
           </p>
         </section>
       </section>
@@ -292,5 +296,7 @@
         <p class="footer__text">copyright 2020 Dom Pod Wierzbą</p>
       </footer>
     </main>
+    
+    <script src="/scripts/main.js"></script>
   </body>
 </html>
