drop menu adjust

--- a/index.html
+++ b/index.html
@@ -46,22 +46,22 @@
               <a class="navigation__link" href="#offer">Oferta</a>
               <ul class="main-menu-drop">
                 <div>
-                  <li>
+                  <li class="navigation__listitem--drop">
                     <a class="navigation__link--drop" href="nordic-walking.html"
                       >Wypoczynek z Nordic Walking</a
                     >
                   </li>
-                  <li>
+                  <li class="navigation__listitem--drop">
                     <a class="navigation__link--drop" href="#offer"
                       >Terapia holistyczna</a
                     >
                   </li>
-                  <li>
+                  <li class="navigation__listitem--drop">
                     <a class="navigation__link--drop" href="akupunktura.html"
                       >Akupunktura</a
                     >
                   </li>
-                  <li>
+                  <li class="navigation__listitem--drop">
                     <a class="navigation__link--drop" href="#offer"
                       >Warsztaty</a
                     >
@@ -77,7 +77,7 @@
                 >LGD Dobra Widawa</a
               >
             </li>
-            <div id="main-menu-marker"></div>
+            <!-- <div id="main-menu-marker"></div> -->
           </ul>
         </nav>
       </header>
