offer section adjust

--- a/index.html
+++ b/index.html
@@ -93,76 +93,61 @@
         </section>
 
         <section class="offer">
-          <article class="offer-article">
-            <header class="offer-article__header">
-              <h2 class="offer-article__heading">
-                Wypoczynek z Nordic Walking
-              </h2>
-              <img
-                class="offer-article__thumb"
-                src="images/oferta-glowna-nordic-walking.jpg"
-                alt="Nordic Walking w Domu Pod Wierzbą"
-              />
-            </header>
-            <p class="offer-article__text">
-              Wypoczynek z Nordic Walking i Fizjoterapią to projekt, który
-              powstał spontanicznie, ponieważ gospodarze domu kochają Nordic
-              Walking i obydwoje są terapeutami i trenerami rozwoju osobistego.
-              Poczuli, że przyszedł czas zaprezentować ten rodzaj wypoczynku
-              szerszemu gronu odbiorców (...)
-            </p>
-            <a href="nordic-walking.html"
-              ><button class="offer-article__button">więcej</button></a
-            >
-          </article>
+          <a href="nordic-walking.html">
+            <article class="offer-article">
+              <header class="offer-article__header">
+                <img
+                  class="offer-article__thumb"
+                  src="images/oferta-glowna-nordic-walking.jpg"
+                  alt="Nordic Walking w Domu Pod Wierzbą"
+                />
+                <h2 class="offer-article__heading">
+                  Wypoczynek z Nordic Walking
+                </h2>
+              </header>
+              <p class="offer-article__text">
+                Wypoczynek z Nordic Walking i Fizjoterapią to projekt, który
+                powstał spontanicznie, ponieważ gospodarze domu kochają Nordic
+                Walking i obydwoje są terapeutami i trenerami rozwoju
+                osobistego. Poczuli, że przyszedł czas zaprezentować ten rodzaj
+                wypoczynku szerszemu gronu odbiorców...
+              </p>
+              <button class="offer-article__button">więcej >></button>
+            </article>
+          </a>
 
-          <article class="offer-article">
-            <header class="offer-article__header">
-              <h2 class="offer-article__heading">Akupunktura</h2>
-              <img
-                class="offer-article__thumb"
-                src="images/oferta-glowna-akupunktura.jpg"
-                alt="Akupunktura w Domu Pod Wierzbą"
-              />
-            </header>
-            <p class="offer-article__text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi
-              porro iste excepturi! Voluptate numquam quasi veritatis similique
-              distinctio iure optio minima autem est, corporis ab laudantium
-              excepturi possimus quam deleniti!
-            </p>
-            <a href="akupunktura.php"
-              ><button class="offer-article__button">więcej</button></a
-            >
-          </article>
-
-          <article class="offer-article">
-            <header class="offer-article__header">
-              <img
-                class="offer-article__thumb"
-                src="images/oferta-glowna-nordic-walking.jpg"
-                alt="Nordic Walking w Domu Pod Wierzbą"
-              />
-              <h2 class="offer-article__heading">Terapia holistyczna</h2>
-            </header>
-            <p class="offer-article__text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi
-              porro iste excepturi! Voluptate numquam quasi veritatis similique
-              distinctio iure optio minima autem est, corporis ab laudantium
-              excepturi possimus quam deleniti!
-            </p>
-            <button class="offer-article__button">więcej</button>
-          </article>
+          <a href="warsztaty.html">
+            <article class="offer-article">
+              <header class="offer-article__header">
+                <img
+                  class="offer-article__thumb"
+                  src="images/o-domu-grupa-warsztatowa-dom-pod-wierzba.jpg"
+                  alt="Warsztaty w domu pod Wierzbą"
+                />
+                <h2 class="offer-article__heading">Warsztaty</h2>
+              </header>
+              <p class="offer-article__text">
+                Dom pod Wierzbą jest idealnym miejscem do przeprowadzania
+                kameralnych kilkudniowych warsztatów. Dobrze się u nas czują
+                grupy kilkunastoosobowe. Dom jest nowoczesny, bardzo wygodny i
+                przestronny. Został wybudowany w taki sposób, żeby chronić
+                środowisko naturalne. Stojąc tuż przy lesie, daje gościom stałe
+                uczucie połączenia z naturą, doświadczenie głębokiej ciszy i
+                spokoju...
+              </p>
+              <button class="offer-article__button">więcej >></button>
+            </article>
+          </a>
 
           <a href="akupunktura.php">
             <article class="offer-article">
               <header class="offer-article__header">
-                <h2 class="offer-article__heading">Akupunktura</h2>
                 <img
                   class="offer-article__thumb"
-                  src="images/oferta-glowna-akupunktura.jpg"
-                  alt="Akupunktura w Domu Pod Wierzbą"
+                  src="images/oferta-glowna-nordic-walking.jpg"
+                  alt="Nordic Walking w Domu Pod Wierzbą"
                 />
+                <h2 class="offer-article__heading">Terapia holistyczna</h2>
               </header>
               <p class="offer-article__text">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi
@@ -170,7 +155,28 @@
                 similique distinctio iure optio minima autem est, corporis ab
                 laudantium excepturi possimus quam deleniti!
               </p>
-              <button class="offer-article__button">więcej</button>
+              <button class="offer-article__button">więcej >></button>
+            </article>
+          </a>
+
+          <a href="akupunktura.php">
+            <article class="offer-article">
+              <header class="offer-article__header">
+                <img
+                  class="offer-article__thumb"
+                  src="images/oferta-glowna-akupunktura.jpg"
+                  alt="Akupunktura w Domu Pod Wierzbą"
+                />
+                <h2 class="offer-article__heading">Akupunktura</h2>
+              </header>
+
+              <p class="offer-article__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi
+                porro iste excepturi! Voluptate numquam quasi veritatis
+                similique distinctio iure optio minima autem est, corporis ab
+                laudantium excepturi possimus quam deleniti!
+              </p>
+              <button class="offer-article__button">więcej >></button>
             </article>
           </a>
         </section>
