subpage warsztaty added

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     ></script>
   </head>
 
-  <body>
+  <body class="bkgd-image">
     <main class="main">
       <header class="top-header">
         <a
@@ -28,13 +28,15 @@
         >
       </header>
 
-      <header class="main-header">
-        <div class="main-header__logo">
+      <header class="site-header">
+        <div class="site-header__logo">
+          <a href="index.html">
           <img
-            class="main-header__logo-img"
+            class="site-header__logo-img"
             src="images/logo-dom-pod-wierzba.png"
             alt="pod pod wierzbą logotyp"
           />
+          </a>
         </div>
         <button class="hamburger hamburger--js" aria-label="otwórz menu">
           MENU
