subpage warsztaty progress

--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
         >
       </header>
 
-      <header class="site-header">
+      <header class="site-header brown">
         <div class="site-header__logo">
           <a href="index.html">
-          <img
-            class="site-header__logo-img"
-            src="images/logo-dom-pod-wierzba.png"
-            alt="pod pod wierzbą logotyp"
-          />
+            <img
+              class="site-header__logo-img"
+              src="images/logo-dom-pod-wierzba.png"
+              alt="pod pod wierzbą logotyp"
+            />
           </a>
         </div>
         <button class="hamburger hamburger--js" aria-label="otwórz menu">
@@ -298,45 +298,19 @@
             />
           </h2>
           <p class="fund-info__text">
-            Firma Dom Pod Wierzbą powstała dzięki dofinansowaniu ze środków Unii
-            Europejskiej w ramach działania "Wsparcie dla rozwoju lokalnego w
-            ramach inicjatywy LEADER" Programu Rozwoju Obszarów Wiejskich na
-            lata 2014-2020, udzielonemu w ramach przeprowadzonego przez Lokalną
-            Grupę Działania Dobra Widawa naboru wniosków w zakresie podejmowania
-            działalności gospodarczej na obszarze Stowarzyszenia.
+            Europejski Fundusz Rolny na rzecz Rozwoju Obszarów Wiejskich: Europa
+            inwestująca w obszary wiejskie
           </p>
+
           <p class="fund-info__text">
-            Lokalna Grupa Działania Dobra Widawa jest Stowarzyszeniem
-            działającym na rzecz rozwoju lokalnego obszarów wiejskich.
-            Stowarzyszenie działa na zasadzie partnerstwa składającego się z
-            przedstawicieli sektora publicznego, społecznego, gospodarczego oraz
-            mieszkańców. LGD Dobra Widawa zrzesza 10 sąsiadujących ze sobą gmin:
-            Bierutów, Dobroszyce, Dziadowa Kłoda, Międzybórz, Oleśnica, Syców,
-            Czernica, Długołęka, Jelcz-Laskowice, Wilków, należących do 4
-            powiatów – oleśnickiego, wrocławskiego, oławskiego oraz
-            namysłowskiego.
+            Operacja pn. "Dom pod Wierzbą - wypoczynek z Nordic Walking i
+            Fizjoterapią" mająca na celu utworzenie działalności gospodarczej na
+            obszarze Dolnej Widawy i stworzenie jednego miejsca pracy
+            współfinansowana jest ze środków Unii Europejskiej w ramach
+            działania „Wsparcie dla rozwoju lokalnego w ramach inicjatywy
+            LEADER” Programu Rozwoju Obszarów Wiejskich na lata 2014-2020.
           </p>
-          <p class="fund-info__text">
-            LGD to przede wszystkim ludzie, którzy przy wykorzystaniu potencjału
-            zasobów przyrodniczych, historycznych i kulturowych obszaru, chcą
-            działać na rzecz rozwoju i promocji własnego regionu, tworząc lepsze
-            warunki do życia wszystkich jego mieszkańców.
-          </p>
-          <p class="fund-info__text">
-            Zadaniem LGD jest łączenie rozproszonych dotąd działań mieszkańców,
-            stymulowanie ich pomysłowości i aktywności związanej z działaniem na
-            rzecz obszaru gmin członkowskich oraz pozyskiwanie środków
-            finansowych na realizację celów zapisanych w Lokalnej Strategii
-            Rozwoju tego obszaru. Na podstawie podpisanej z Zarządem Województwa
-            Dolnośląskiego Umowy o warunkach i sposobie realizacji strategii
-            rozwoju lokalnego kierowanego przez społeczność, LGD Dobra Widawa
-            prowadzi nabory wniosków o przyznanie pomocy w ramach PROW na lata
-            2014-2020 w zakresie podejmowanie i rozwijania działalności
-            gospodarczej na terenach wiejskich, rozwoju ogólnodostępnej
-            infrastruktury, projektów grantowych realizowanych przez lokalne
-            organizacje pozarządowe. Na wsparcie dla obszaru gmin Partnerstwa
-            Dobra Widawa przeznaczonych zostało 14 000 000 zł.
-          </p>
+          
           <p class="fund-info__text">
             Informacje o LGD Dobra Widawa: www.dobrawidawa.pl
           </p>
