about section rebuild

--- a/index.html
+++ b/index.html
@@ -187,24 +187,9 @@
           <article class="about-article">
             <header class="about-article__header">
               <h2 class="about-article__heading">O domu...</h2>
-              <img
-                class="about-article__image"
-                src="images/o-domu-asia-szypula-dom-pod-wierzba.jpg"
-                alt="Joanna Szypuła"
-              />
-              <img
-                class="about-article__image"
-                src="images/o-domu-grupa-warsztatowa-dom-pod-wierzba.jpg"
-                alt="Grupa warsztatowa"
-              />
-              <img
-                class="about-article__image"
-                src="images/o-domu-ludzie-pod-wierzba.jpg"
-                alt="Ludzie pod wierzbą"
-              />
             </header>
 
-            <p class="about-article__text bold">
+            <p class="about-article__text--intro">
               Dom pod Wierzbą to spokojny rodzinny dom, a jednocześnie ośrodek
               rozwoju. Niepowtarzalne jest to, że Joanna i Paweł na co dzień tu
               mieszkają. To nadaje ośrodkowi przytulny charakter rodzinnego
@@ -214,6 +199,11 @@
               dają wytchnienie, głębokie zanurzenie w ciszy i naturze. Sprzyja
               to kreatywnej i duchowej pracy.
             </p>
+            <img
+              class="about-article__image--right"
+              src="images/about-image-1-widok-z-domu-kwiaty.jpg"
+              alt="Widok z Domu Pod Wierzbą"
+            />
 
             <p class="about-article__text">
               Piętro to czterdziestopięciometrowa sala warsztatowa wyposażona w
@@ -225,7 +215,58 @@
               prosto w oczy z tak bliskiej odległości.
             </p>
 
-            <button class="about-article__button"></button>
+            <p class="about-article__text">
+              Tuż przed ostatnim zakrętem do ośrodka stoi stara Wierzba, od
+              której pochodzi nazwa, a dalej zaczyna się las. Dom stoi wśród łąk
+              przy lesie, zamiast bramy i płotu strzegą go przepiękne dęby. Mamy
+              sporo miejsca na ognisko, aktywności i odpoczynek wśród zieleni.
+              Można wybrać się na spacer nad Widawę lub stawy. Nazrywać ziół,
+              kupić jajka i olej od naszego sąsiada.
+            </p>
+
+            <p class="about-article__text">
+              Podczas szkoleń i warsztatów zapewniamy posiłki. Gotujemy pysznie
+              i zdrowo. Skosztować tu można prostych dań wegańskich i
+              wegetariańskich. Część warzyw pochodzi z naszego permakulturowego
+              ogródka. Do wyboru jest pieczywo nie tylko na mące pszennej. Choć
+              królują zupy, kasze i warzywa, nie stronimy od smacznych kiełbasek
+              przy ognisku. Dostosowujemy posiłki do potrzeb grupy. Można tutaj
+              zjeść naleśniki z czarnego bzu i kanie rosnące za domem.
+            </p>
+
+            <div class="grid-4-col">
+              <img
+                class="about-article__image"
+                src="images/about-gallery-img-sala-warsztatowa-thumb.jpg"
+                alt="Widok z Domu Pod Wierzbą"
+              />
+              <img
+                class="about-article__image"
+                src="images/about-gallery-zimorodek-thumb.jpg"
+                alt="Widok z Domu Pod Wierzbą"
+              />
+              <img
+                class="about-article__image"
+                src="images/about-gallery-img-wieczor-chmury-thumb.jpg"
+                alt="Widok z Domu Pod Wierzbą"
+              />
+              <img
+                class="about-article__image"
+                src="images/about-gallery-img-wiosna-thumb.jpg"
+                alt="Widok z Domu Pod Wierzbą"
+              />
+            </div>
+
+            <p class="about-article__text">
+              Nasze miejsce to baza na szkolenia, warsztaty, coaching, terapię
+              dla wszystkich, których w rozwoju wspiera bliskość natury.
+            </p>
+
+            <p class="about-article__text">
+              Dom pod Wierzbą jest położony na Dolnym Śląsku, niedaleko Jelcza –
+              Laskowice, zaledwie 30 km od Wrocławia, 20 km od Oławy, 10 km od
+              Oleśnicy.
+            </p>
           </article>
         </section>
 
@@ -310,9 +351,12 @@
             działania „Wsparcie dla rozwoju lokalnego w ramach inicjatywy
             LEADER” Programu Rozwoju Obszarów Wiejskich na lata 2014-2020.
           </p>
-          
+
           <p class="fund-info__text">
-            Informacje o LGD Dobra Widawa: www.dobrawidawa.pl
+            Informacje o LGD Dobra Widawa:
+            <a href="http://www.dobrawidawa.pl" target="_blank"
+              >www.dobrawidawa.pl</a
+            >
           </p>
         </section>
       </section>
